[metadata]
name = vault_recovery
version = attr: vault.VERSION
author = Florian Kantelberg
author_email = florian.kantelberg@mailbox.org
description = Tool for a disaster recovery of Odoo's vault module
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = vault disaster recovery
url = https://github.com/fkantelberg/vault-recovery
classifiers=
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3

[options]
include_package_data = True
package_dir =
  = src
packages = find:
python_requires = >=3.10
install_requires =
  cryptography
  psycopg2
  typing_extensions

[options.entry_points]
console_scripts =
  vault = vault.__main__:main

[options.packages.find]
where = src
